--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -18,18 +18,53 @@
         }
       }
 
-      function initThemeClass() {
-        const darkMode = window.matchMedia(
-          "(prefers-color-scheme: dark)",
-        ).matches
-        toggleThemeClass(darkMode)
+      function getThemePreference() {
+        try {
+          // Try to get theme preference from config
+          const configData = localStorage.getItem('theme-preference')
+          if (configData) {
+            return configData
+          }
+        } catch (e) {
+          // Fallback to system preference
+        }
+        return 'system'
       }
 
+      function applyTheme(themePreference = null) {
+        const preference = themePreference || getThemePreference()
+
+        if (preference === 'light') {
+          toggleThemeClass(false)
+        } else if (preference === 'dark') {
+          toggleThemeClass(true)
+        } else {
+          // System preference
+          const darkMode = window.matchMedia("(prefers-color-scheme: dark)").matches
+          toggleThemeClass(darkMode)
+        }
+      }
+
+      function initThemeClass() {
+        applyTheme()
+      }
+
+      // Listen for system theme changes only if using system preference
       window
         .matchMedia("(prefers-color-scheme: dark)")
         .addEventListener("change", (e) => {
-          toggleThemeClass(e.matches)
+          const preference = getThemePreference()
+          if (preference === 'system') {
+            toggleThemeClass(e.matches)
+          }
         })
+
+      // Listen for theme preference changes from the app
+      window.addEventListener('theme-preference-changed', (e) => {
+        const newPreference = e.detail
+        localStorage.setItem('theme-preference', newPreference)
+        applyTheme(newPreference)
+      })
 
       initThemeClass()
     </script>
